23.0.1
------
(RB=1340631)
Safely build validating schema on request if using projections, return HTTP 400 for projections with nonexistent fields

23.0.0
------
(RB=1332535)
Add URIMapper class and changed getPartitionAccessor API (backwards incompatible)

22.0.5
------
(RB=1318132)
Unstructured Data Post Reactive

(RB=1342823)
Allow SslSessionNotTrustedException to extend RuntimeException

22.0.4
------
(RB=1309258)
Implements AsyncRateLimiter

22.0.3
------
(RB=1338284)
Revert "Build validating schema on request if using projections, return HTTP 400 for projections with nonexistent fields"

22.0.2
------
(RB=1336587)
Disable offending D2 tests failing with connection loss to unblock pegasus version release.

(RB=1328278)
Removed _declaredIncline property from equals and hashCode methods on UnionDataSchema.Member class.

(RB=1328802)
Add default value for HTTP_QUERY_POST_THRESHOLD

22.0.1
-------
(RB=1328701)
Fix pdsc to avro transform issue when record type is union with alias

22.0.0
-------
(RB=1266400)
Integrated streaming codec with RestLiServer. This change also includes substantial refactoring of RestLiServer.

(RB=1325995)
Added enums to TestQueryParamsUtil to prove it works since we have production use cases that depend on it

(RB=1325557)
Creating a startupExecutor to use in the first phases of startup to not re-use/conflict with the internal usages of other executors

21.0.6
-------
(RB=1312972)
Build validating schema on request if using projections, return HTTP 400 for projections with nonexistent fields

(RB=1325295)
use retryZookeeper in AclAwareZookeeperTest to improve test stability

(RB=1295192)
refactored zkConnectionDealer to SharedZkConnectionProvider

21.0.5
-------
(RB=1277357)
Add support for coercing Maps to DataMaps in QueryParamsUtil.convertToDataMap()

21.0.4
-------
(RB=1294454)
Adding session resumption and certificate checker for http2
(RB=1260841)
Add application Principals to cluster for server authentication

21.0.3
-------